Alignment changes and CSS fixes

--- a/src/admin/components/Table/Table.scss
+++ b/src/admin/components/Table/Table.scss
@@ -116,3 +116,11 @@ input:placeholder {
 .expires__datepicker .MuiInputBase-input{
   padding: 9px 11px !important;
 }
+
+.search-box{
+  margin-top: 16px !important;
+}
+
+.search-box .MuiInputBase-input{
+  padding: 8.3px 14px !important;
+}
